--- a/backend/docker-compose.yml
+++ b/backend/docker-compose.yml
@@ -1,6 +1,5 @@
-version: "1.1"
 services:    
     lost_and_found:        
-        image: fengyuli2002/lost_and_found 
+        image: lost_and_found         
         ports:                
-            - "3000:3000"
+            - "3000:3000"     
