App crash on Heroku for unknown reason

--- a/backend/docker-compose.yml
+++ b/backend/docker-compose.yml
@@ -1,5 +1,5 @@
 services:    
     lost_and_found:        
-        image: lost_and_found         
+        image: fengyuli2002/lost_and_found         
         ports:                
             - "3000:3000"     
