--- a/backend/docker-compose.yml
+++ b/backend/docker-compose.yml
@@ -1,5 +1,5 @@
 services:    
-    lost_and_found:        
+    web:        
         image: fengyuli2002/lost_and_found         
         ports:                
-            - "3000:3000"     
+            - "8080:8080"     
