--- a/backend/Dockerfile
+++ b/backend/Dockerfile
@@ -1,4 +1,6 @@
 FROM python:3.8-slim-buster
+# RUN mkdir usr/app
+# WORKDIR usr/app
 COPY . .
-RUN pip install -r requirements.txt
+RUN pip3 install -r requirements.txt
 CMD python app.py
