--- a/heroku.yml
+++ b/heroku.yml
@@ -1,6 +1,6 @@
 build:  
   docker:     
-    web: Dockerfile 
+    web: backend/Dockerfile 
     
 run:   
   web: bundle exec puma -C config/puma.rb
